@@ -1,5 +1,5 @@
 /*
- * $Id: gtwvw.c,v 1.29 2005/10/31 16:57:29 bdj Exp $
+ * $Id: gtwvw.c,v 1.30 2005/11/02 17:08:21 bdj Exp $
  */
 
 /*
@@ -1922,6 +1922,26 @@ ULONG HB_GT_FUNC( gt_GetClipboardSize( void ) )
 
 /* *********************************************************************** */
 
+int kbdShiftsState( void )
+{
+   BYTE kbBuffer[ 256 ];
+   int  kbdShifts;
+   kbdShifts = 0;
+   GetKeyboardState( kbBuffer );
+   if ( kbBuffer[ VK_SHIFT ] & 0x080 ) kbdShifts += GTI_KBD_SHIFT;
+   if ( kbBuffer[ VK_CONTROL ] & 0x080 ) kbdShifts += GTI_KBD_CTRL;
+   if ( kbBuffer[ VK_MENU ] & 0x080 ) kbdShifts += GTI_KBD_ALT;
+   if ( kbBuffer[ VK_LWIN ] & 0x080 ) kbdShifts += GTI_KBD_LWIN;
+   if ( kbBuffer[ VK_RWIN ] & 0x080 ) kbdShifts += GTI_KBD_RWIN;
+   if ( kbBuffer[ VK_APPS ] & 0x080 ) kbdShifts += GTI_KBD_MENU;
+   if ( kbBuffer[ VK_SCROLL ] & 0x01 ) kbdShifts += GTI_KBD_SCROLOCK;
+   if ( kbBuffer[ VK_NUMLOCK ] & 0x01 ) kbdShifts += GTI_KBD_NUMLOCK;
+   if ( kbBuffer[ VK_CAPITAL ] & 0x01 ) kbdShifts += GTI_KBD_CAPSLOCK;
+   return kbdShifts;
+}
+
+/* *********************************************************************** */
+
 void HB_GT_FUNC( gt_ProcessMessages( void ) )
 {
    hb_wvw_gtProcessMessages( s_pWindows[ s_usCurWindow ]) ;
@@ -2190,6 +2210,9 @@ int HB_GT_FUNC( gt_info(int iMsgType, BOOL bUpdate, int iParam, void *vpParam ) 
 
       case GTI_VIEWMAXHEIGHT:
          return pWindowData->ROWS;
+
+      case GTI_KBDSHIFTS:
+         return kbdShiftsState();
 
    }
 
