@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.4645 2005/11/18 23:19:26 marceloanelli Exp $
+ * $Id: ChangeLog,v 1.4646 2005/11/19 15:51:59 likewolf Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2005-11-19 12:20 UTC-0400 Marcelo Anelli <marceloanelli@users.sourceforge.net>
+  * source\rtl\gtwvt\gtwvt.c
+    ! Fixded function kbdShiftsState for keys NumLock, CapsLock and ScrolLock
+      for Toggled keys instead for Key Down
+  * contrib\gtwvw\gtwvw.c
+    + Added function kbdShiftsState for using with GTINFO(GTI_KBDSHIFTS)
 
 2005-11-19 18:50 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
   * include/hbapicdp.h
